# LearnOpenGL_CLion

./: CMakeLists.txt  README.md
includes/glUtils/: shader.h
includes/glad/: glad.h
src/: glad.c  stb_image.cpp
src/1.getting_started/3.2.shaders_interpolation/: shaders_uniform.cpp  shaders_uniform.h
src/1.getting_started/3.3.shaders_class/: shader_class.cpp
src/1.getting_started/3.4.shaders_z_exercise1/: shader_class.cpp
src/1.getting_started/3.5.shaders_z_exercise2/: 3_5_shader.vs  shaders_uniform.cpp
src/1.getting_started/3.6.shaders_z_exercise3/: 3_6_shader.vs  shaders_uniform.cpp
src/1.getting_started/4.1.textures/: textures.cpp
src/1.getting_started/4.2.textures_combined/: texture_4_2.fs  textures.cpp
src/1.getting_started/4.3.textures_exercise2/: textures.cpp
src/1.getting_started/4.4.textures_exercise3/: texture_4_4.fs  textures.cpp
src/1.getting_started/4.5.textures_exercise4/: texture_4_5.fs  textures.cpp
src/1.getting_started/5.1.transformations/: transform_5_1.vs  transformations.cpp
src/1.getting_started/6.1.coordinate_systems/: coordinateSystems.cpp  transform_6_1.vs
